--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -19,6 +19,7 @@ jobs:
       uses: actions/checkout@v2
     - name: Test
       run: |
+        echo $(pwd)
         export GO111MODULE="on"
         export GOPATH=""
         cd go
